Fixed cors, added https://api.bandu.uz api sudomen